force-app/main/default/objects/Business__c/Business__c.object-meta.xml
<CustomObject>
    <label>Business</label>
    <nameField>
        <label>Business Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Business</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>