force-app/main/default/objects/Business__c/fields/ValidityStartDate__c.field-meta.xml
<CustomField>
    <fullName>ValidityStartDate__c</fullName>
    <description>유효 시작일</description>
    <label>Validity Start Date</label>
    <type>Date</type>
</CustomField>